[gd_scene load_steps=13 format=2]

[ext_resource path="res://game/game.tscn" type="PackedScene" id=1]
[ext_resource path="res://core/core.gd" type="Script" id=2]
[ext_resource path="res://ui/main_menu.tscn" type="PackedScene" id=3]
[ext_resource path="res://ui/settings_menu.tscn" type="PackedScene" id=4]
[ext_resource path="res://ui/pause_menu.tscn" type="PackedScene" id=5]
[ext_resource path="res://core/split.png" type="Texture" id=6]
[ext_resource path="res://ui/clock.png" type="Texture" id=7]
[ext_resource path="res://ui/upheavtt.ttf" type="DynamicFontData" id=8]

[sub_resource type="Animation" id=1]
resource_name = "intro"
length = 6.5
tracks/0/type = "value"
tracks/0/path = NodePath("LeftSide/Viewport/Camera2D:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 4, 4.9, 6.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( -256, -150 ), Vector2( -256, 512 ), Vector2( -256, 512 ), Vector2( -768, 512 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("RightSide/Viewport/Camera2D:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 4, 4.9, 6.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 256, -150 ), Vector2( 256, 512 ), Vector2( 256, 512 ), Vector2( 768, 512 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("LeftSide/Viewport/Game/MountainsLeft:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 4.9, 6.5 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( -384, -18 ), Vector2( -384, -18 ), Vector2( -640, -18 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("LeftSide/Viewport/Game/MountainsRight:position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 4.9, 6.5 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 384, -18 ), Vector2( 384, -18 ), Vector2( 640, -18 ) ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("LeftSide/Viewport/Game/ForestLeft:position")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0, 4, 4.9, 6.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( -448, 200 ), Vector2( -448, 120 ), Vector2( -448, 120 ), Vector2( -576, 120 ) ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("LeftSide/Viewport/Game/ForestRight:position")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0, 4, 4.9, 6.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 448, 200 ), Vector2( 448, 120 ), Vector2( 448, 120 ), Vector2( 576, 120 ) ]
}
tracks/6/type = "value"
tracks/6/path = NodePath("LeftSide/Viewport/Game/Water:position")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/keys = {
"times": PoolRealArray( 0, 4, 6.5 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 600 ), Vector2( 0, 520 ), Vector2( 0, 520 ) ]
}
tracks/7/type = "value"
tracks/7/path = NodePath("Divider:visible")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/keys = {
"times": PoolRealArray( 4.1, 4.3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ false, true ]
}
tracks/8/type = "method"
tracks/8/path = NodePath(".")
tracks/8/interp = 1
tracks/8/loop_wrap = true
tracks/8/imported = false
tracks/8/enabled = true
tracks/8/keys = {
"times": PoolRealArray( 0, 6.5 ),
"transitions": PoolRealArray( 1, 1 ),
"values": [ {
"args": [  ],
"method": "intro_start"
}, {
"args": [  ],
"method": "intro_end"
} ]
}
tracks/9/type = "value"
tracks/9/path = NodePath("NinePatchRect:visible")
tracks/9/interp = 1
tracks/9/loop_wrap = true
tracks/9/imported = false
tracks/9/enabled = true
tracks/9/keys = {
"times": PoolRealArray( 4.2, 4.6 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ false, true ]
}

[sub_resource type="Animation" id=2]
resource_name = "scroll_away"
tracks/0/type = "value"
tracks/0/path = NodePath("LeftSide/Viewport/Camera2D:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( -256, 512 ), Vector2( -768, 512 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("RightSide/Viewport/Camera2D:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 256, 512 ), Vector2( 768, 512 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("LeftSide/Viewport/Game/MountainsLeft:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( -384, -18 ), Vector2( -640, -18 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("LeftSide/Viewport/Game/MountainsRight:position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 384, -18 ), Vector2( 640, -18 ) ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("LeftSide/Viewport/Game/ForestLeft:position")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( -448, 120 ), Vector2( -576, 120 ) ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("LeftSide/Viewport/Game/ForestRight:position")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 448, 120 ), Vector2( 576, 120 ) ]
}

[sub_resource type="Animation" id=3]
resource_name = "scroll_transition"
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath("Divider:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0.2, 0.3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ false, true ]
}

[sub_resource type="DynamicFont" id=4]
size = 36
font_data = ExtResource( 8 )

[node name="Core" type="Node2D"]
pause_mode = 2
script = ExtResource( 2 )

[node name="LeftSide" type="ViewportContainer" parent="."]
anchor_bottom = 1.0
margin_right = 512.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Viewport" type="Viewport" parent="LeftSide"]
size = Vector2( 512, 576 )
handle_input_locally = false
disable_3d = true
usage = 0
render_target_update_mode = 3

[node name="Camera2D" type="Camera2D" parent="LeftSide/Viewport"]
position = Vector2( -256, -150 )
current = true

[node name="Game" parent="LeftSide/Viewport" instance=ExtResource( 1 )]

[node name="ForestLeft" parent="LeftSide/Viewport/Game" index="2"]
position = Vector2( -448, 200 )

[node name="ForestRight" parent="LeftSide/Viewport/Game" index="3"]
position = Vector2( 448, 200 )

[node name="RightSide" type="ViewportContainer" parent="."]
anchor_left = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 512.0
margin_right = 390.0
margin_bottom = 576.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Viewport" type="Viewport" parent="RightSide"]
size = Vector2( 512, 576 )
handle_input_locally = false
disable_3d = true
usage = 0
render_target_update_mode = 3

[node name="Camera2D" type="Camera2D" parent="RightSide/Viewport"]
position = Vector2( 256, -150 )
current = true

[node name="Divider" type="TextureRect" parent="."]
visible = false
margin_left = 503.0
margin_right = 521.0
margin_bottom = 675.0
texture = ExtResource( 6 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PauseMenu" parent="." instance=ExtResource( 5 )]
visible = false
margin_right = 1024.0
margin_bottom = 576.0
rect_min_size = Vector2( 1024, 576 )

[node name="MainMenu" parent="." instance=ExtResource( 3 )]
margin_right = 1024.0
margin_bottom = 576.0

[node name="SettingsMenu" parent="." instance=ExtResource( 4 )]
visible = false
margin_right = 1024.0
margin_bottom = 576.0

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/intro = SubResource( 1 )
anims/scroll_away = SubResource( 2 )
anims/scroll_transition = SubResource( 3 )

[node name="NinePatchRect" type="NinePatchRect" parent="."]
visible = false
margin_left = 442.0
margin_top = 3.0
margin_right = 587.0
margin_bottom = 38.0
texture = ExtResource( 7 )
patch_margin_left = 4
patch_margin_top = 3
patch_margin_right = 4
patch_margin_bottom = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="NinePatchRect"]
margin_right = 145.0
margin_bottom = 33.0
custom_fonts/font = SubResource( 4 )
text = "60:00"
align = 1
[connection signal="paused" from="LeftSide/Viewport/Game" to="." method="_on_Game_paused"]
[connection signal="continue_game" from="PauseMenu" to="." method="_on_continue_game"]
[connection signal="go_to_main_menu" from="PauseMenu" to="." method="_return_to_main_menu"]
[connection signal="go_to_settings" from="PauseMenu" to="." method="_go_to_settings"]
[connection signal="go_to_settings" from="MainMenu" to="." method="_go_to_settings"]
[connection signal="play_game" from="MainMenu" to="." method="_on_play_game"]
[connection signal="go_back" from="SettingsMenu" to="." method="_return_from_settings"]

[editable path="LeftSide/Viewport/Game"]
